# tehDJ

./: README.md  resource.aps  resource.rc  tehDJ.vcproj  tehDJ.wdr
artwork/: turntable.lwo
include/: AudioThread.h  CircQueue.h  DiskThread.h  dj.h  djCodec.h  djConfig.h  djFilter.h  djGui.h  djLog.h  djOutput.h  djSetup.h  djStream.h  djThread.h  djVisual.h  ver.h
include/bitmaps/: butt.xpm  deejay.xpm
include/ext/: glbutton.h  inlines.h  resample.h  spinbitg.h
libs/fftw-2.1.3/fftw/: ReadMe.txt  fftw.sln  fftw.vcproj  stdafx.cpp
libs/fftw-2.1.3/rfftw/: ReadMe.txt  rfftw.sln  rfftw.vcproj
libs/mad/: minimad.c
libs/mad/libmad/: layer3.c
libs/mad/msvc++/libmad/: libmad.sln  libmad.vcproj
libs/mad/msvc++/madplay/: madplay.ncb  madplay.sln  madplay.vcproj
libs/mpglib/: vbrhead.c
libs/mpglib/StrongARM/LIB/: layer3.c
libs/portaudio_v18/: Makefile.linux
libs/portaudio_v18/WinVC/: Readme.txt  WinVC.dsw  WinVC.ncb  WinVC.opt  WinVC.sln
libs/portaudio_v18/WinVC/Lib/: PAStaticDSD.lib
libs/portaudio_v18/WinVC/PAStaticDS/: PAStaticDS.dep  PAStaticDS.dsp  PAStaticDS.mak  PAStaticDS.vcproj
libs/portaudio_v18/WinVC/PAStaticWMME/: PAStaticWMME.dep  PAStaticWMME.dsp  PAStaticWMME.mak  PAStaticWMME.vcproj
libs/portaudio_v18/WinVC/Tests/: Clear.bat  Fuzz.dep  Fuzz.mak  Readme.txt  clip.dep  clip.mak  devs.dep  devs.mak  devs2.dep  devs2.mak  dither.dep  dither.mak  errs.dep  errs.mak  makeDDS.bat  makeDWMME.bat  makeRDS.bat  makeRWMME.bat  minlat.dep  minlat.mak  pink.dep  pink.mak  record.dep  record.mak  sine.dep  sine.mak  wire.dep  wire.mak
libs/portaudio_v18/pa_asio/: pa_asio.cpp
libs/portaudio_v18/pa_common/: pa_host.h  pa_lib.c
libs/portaudio_v18/pa_mac/: pa_mac.c
libs/portaudio_v18/pa_sgi/: pa_sgi.c
libs/portaudio_v18/pa_tests/: debug_multi_in.c  debug_multi_out.c  debug_record.c  debug_sine.c  pa_devs.c  pa_fuzz.c  paqa_devs.c  paqa_errs.c  patest_buffer.c  patest_hang.c  patest_many.c  patest_maxsines.c  patest_multi_sine.c  patest_record.c  patest_sine.c  patest_sine_formats.c  patest_toomanysines.c  patest_wire.c
libs/portaudio_v18/pa_unix_oss/: pa_unix_oss.c
libs/portaudio_v18/pa_win_ds/: pa_dsound.c
libs/portaudio_v18/pa_win_wmme/: pa_win_wmme.c
libs/portaudio_v18/pablio/: pablio.c  ringbuffer.h  test_w_saw.c
libs/resample-1.7/: .gdbinit  INSTALL  Makefile  README  README.deemph  TAGS  filterkit.c  resample.1  resample.c  resample.h  resamplesubs.c  sndlibextra.c  sndlibextra.h  stdefs.h  warp.c
libs/resample-1.7/resample/: ReadMe.txt  resample.ncb  resample.sln  resample.vcproj
libs/resample-1.7/resample/Debug/: BuildLog.htm  vc70.idb
libs/resample-1.7/sndlib-10/: HISTORY.sndlib  README.sndlib  config.cache  config.h  config.h.in  config.status  configure  configure.in  makefile  makefile.in  sndlib.h  sndplay  transnd.cl
libs/resample-1.7/testdir/: Makefile  i.snd  ir1p1.resample-1.6.snd  irp9.resample-1.6.snd  sine.snd  siner.resample-1.6.snd  siner1p1.resample-1.6.snd  sinerp9.resample-1.6.snd
src/: AudioThread.cpp  DiskThread.cpp  dj.cpp  djFilter.cpp  djGui.cpp  djLog.cpp  djMAD.cpp  djMPGLib.cpp  djOutput.cpp  djSetup.cpp  djStream.cpp  djThread.cpp  djVisual.cpp  tehDJ_wdr.cpp  tehDJ_wdr.h
src/ext/: glbutton.cpp  minimad.c  resamplesubs.c  spinbitg.cpp
